fixed spacing for subsections

--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,7 @@ body {
     color: var(--text-color);
     text-align: center;
     padding-top: 20px;
+    padding-bottom: 5px;
 }
 
 /* project cards */
